kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
  annotations: 
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.spcluster.tk
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: cluster-ip-frontend
           port:
             number: 80
  - host: mockserver.spcluster.tk
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cluster-ip-mockserver
              port:
                number: 3005
  - host: backend.spcluster.tk
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-registry
              port:
                number: 8761
        - path: /address
          pathType: Prefix
          backend:
            service:
              name: address
              port:
                number: 9001
